--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
+    <Folder Include="Abstract\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Abstract\" />
+    <ProjectReference Include="..\..\FinalProject\Core\Core.csproj" />
   </ItemGroup>
 
 </Project>
